# maas-ultimate-bug-triager

./: .gitignore  README.md
backend/: config.yaml.example  pyproject.toml
backend/src/lp/: .gitignore  main.py  pyproject.toml
backend/src/lp/lp/: bugs.py  reproducer.py
backend/src/maas_ultimate_bug_triager/: __init__.py  auth.py  config.py  dependencies.py  main.py
backend/src/maas_ultimate_bug_triager/api/: bugs.py  config.py  reproducer.py
backend/src/maas_ultimate_bug_triager/models/: action.py  bug.py
backend/src/maas_ultimate_bug_triager/services/: ai.py  launchpad.py
backend/tests/: conftest.py  test_auth.py  test_main.py
backend/tests/test_api/: test_bugs.py  test_config.py
backend/tests/test_services/: test_ai.py  test_launchpad.py
bug-processor/: bug_extractor.py  bugs.json
bug-processor/bugs/: bug-001.json  bug-2133892.json  bug-2139103.json  bug-2146809.json  bug-2147706.json  bug-2151214.json  bug-template.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ActionCard.tsx  ActionEditor.tsx  BugList.tsx  BugRow.tsx  BugTriageView.tsx  CommentTimeline.tsx  ModelSelector.tsx  ReproductionConsole.tsx  Skeleton.tsx  Toast.tsx
frontend/src/context/: AppContext.tsx
frontend/src/hooks/: useBugAnalysis.ts  useBugs.ts  useToast.tsx
frontend/src/types/: index.ts
lp/: main.py  pyproject.toml
lp/lp/: __init__.py  bugs.py  reproducer.py
