[project]
name = "lp"
version = "0.1.0"
description = "MAAS bug triager"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "keyring>=25.7.0",
    "launchpadlib",
    "google-generativeai>=0.3.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lp*"]
